Fixed missing border underneath text box

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -66,7 +66,7 @@ body {
   outline: none;
   border: none;
   width: 100%;
-  height: 2.6em;
+  height: 2.8em;
   resize: none;
   padding: 0.7em 1em;
 }
